<resources>
    <string name="app_name">chakra</string>
    <string name="text_here_we_go">Here we go</string>
    <string name="text_great_you_are_now_member_of_chakra_rewards">Great you are now member of Chakra rewards</string>
    <string name="text_explore_brand">Explore brand</string>
    <string name="text_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="text_collect_poin">Collect poin</string>
    <string name="text_redeem_special_gift">Redeem special gift</string>
    <string name="text_explore_chakra">Explore Chakra</string>
    <string name="cd_icon">icon</string>
    <string name="yey_uploaded_successfully">Yey, Receipt has been uploaded successfully and is being verified</string>
    <string name="you_are_heading">You are heading towards to earn more points. We will notice you shortly</string>
    <string name="_9_juni_2021">9 Juni 2021 5:08 PM</string>
    <string name="ocr_2021300512331">OCR-2021300512331</string>
    <string name="see_top_up_history">See Top Up History</string>
    <string name="back_to_card">Back to Card</string>
    <string name="transaction_number">Transaction Number</string>
    <string name="text_img_box">text_img_box</string>
    <string name="text_your_wishlist_is_empty">text_your_wishlist_is_empty</string>
    <string name="text_tap_here">text_tap_here</string>
    <string name="text_find_product">text_find_product"</string>
    <string name="tv_your_wishlist_is_empty">Your Wishlist is Empty</string>
    <string name="tv_tap_heart_button_to_start_saving_your_favorite_item">tap heart button to start saving your favorite item</string>
    <string name="tv_find_product">Find Product</string>
    <string name="tv_time">5:08 PM</string>
    <string name="wishlist">Wishlist</string>
    <string name="search_product_in_wishlist"> Search product in wishlist </string>
    <string name="grill_pan_jumbonew">Grill Pan Jumbo New</string>
    <string name="_50_000_points">50,000 Points</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="voucher_digital_kalcare_com_50">Voucher Digital Kalcare.com 50...</string>
    <string name="text_img_cart">text_img_cart</string>
    <string name="grill_pan_jumbo_new">Grill Pan Jumbo New</string>
    <string name="move_to_wishlist">Move to Wishlist</string>
    <string name="handy_steamer">Handy Steamer</string>
    <string name="_60_000_points">60.000 Points</string>
    <string name="voucher_digital_kalcare_com_50_000">Voucher Digital Kalcare.com 50.000</string>
    <string name="total_points">Total points</string>
    <string name="_160_000">160.000</string>
    <string name="text_next">Next</string>
    <string name="detail_top_up">Detail Top Up</string>
    <string name="topup_date">TopUp Date</string>
    <string name="ocr_2021300512331">OCR-2021300512331</string>
    <string name="channel">Channel</string>
    <string name="text_9_juni_2021_5_08_pm">9 Juni 2021 5:08 pm</string>
    <string name="_10_000_points">10,000 Points</string>
    <string name="loyalty">Loyalty</string>
    <string name="detail_info_struck">Detail Info Struck</string>
    <string name="outlet_name">Outlet name</string>
    <string name="tv_indomaret_yos_sudarso_bsd_sm">Indomaret Yos Sudarso BSD, SM</string>
    <string name="rewards_point">Rewards Point</string>
    <string name="tv_500_point">500 Point</string>
    <string name="tv_bonus_point">Bonus Point</string>
    <string name="tv_receipt_date">Receipt Date</string>
    <string name="tv_10_juni_2021">10 Juni 2021</string>
    <string name="tv_status">Status</string>
    <string name="tv_approved">Approved</string>
    <string name="btn_need_help">Need Help ?</string>
</resources>