<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_giant_two"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_giant_two"
        android:contentDescription="@string/cd_icon"
        android:src="@drawable/fireworks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:fontFamily="@font/monbold"
        android:textColor="@color/black"
        android:textSize="@dimen/font_title_content"
        android:textAlignment="center"
        android:text="@string/yey_uploaded_successfully"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/you_are"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/you_are_heading"
        android:textSize="@dimen/font_regular"
        android:fontFamily="@font/monbold"
        android:textColor="@color/color_gray4"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/text_receipt"
        app:layout_constraintStart_toEndOf="@+id/text_receipt"
        app:layout_constraintStart_toStartOf="@+id/text_receipt"
        app:layout_constraintTop_toBottomOf="@+id/text_receipt" />

    <ImageView
        android:id="@+id/line_70"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_smaller"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_smaller"
        android:contentDescription="@string/cd_icon"
        android:src="@drawable/line_70"
        app:layout_constraintEnd_toEndOf="@+id/you_are"
        app:layout_constraintStart_toStartOf="@+id/you_are"
        app:layout_constraintTop_toBottomOf="@+id/you_are" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/_9_juni_2021_5_08_pm"
        android:fontFamily="@font/monbold"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/line_70"
        app:layout_constraintStart_toStartOf="@+id/line_70"
        app:layout_constraintTop_toBottomOf="@+id/line_70" />

    <TextView
        android:id="@+id/text_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:text="@string/transaction_number"
        android:fontFamily="@font/monbold"
        android:textColor="@color/color_cmyk"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/text_time"
        app:layout_constraintStart_toStartOf="@+id/text_time"
        app:layout_constraintTop_toBottomOf="@+id/text_time" />

    <TextView
        android:id="@+id/ocr_2021300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:text="@string/ocr_2021300512331"
        android:fontFamily="@font/monbold"
        android:textSize="@dimen/font_regular"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_transaction"
        app:layout_constraintStart_toStartOf="@+id/text_transaction"
        app:layout_constraintTop_toBottomOf="@+id/text_transaction" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_regular"
        android:layout_marginEnd="@dimen/spacing_regular"
        android:layout_marginBottom="@dimen/spacing_normal_quarter"
        android:background="@drawable/custom_btn_explore"
        android:fontFamily="@font/monbold"
        android:text="@string/see_top_up_history"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_regular"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_regular"
        android:layout_marginEnd="@dimen/spacing_regular"
        android:layout_marginBottom="@dimen/spacing_huge_slight"
        android:background="@drawable/custom_btn_outline"
        android:fontFamily="@font/monbold"
        android:text="@string/back_to_card"
        android:textAllCaps="false"
        android:textColor="@color/color_blue50"
        android:textSize="@dimen/font_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>