<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiptEmptyActivity">


    <ImageView
        android:id="@+id/img_rectangle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:src="@drawable/custom_rectangle"
        android:contentDescription="@string/cd_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_rectangle" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="12dp"
        android:background="@color/color_transparent"
        android:src="@drawable/ic_arrow__left"
        android:contentDescription="@string/cd_icon"
        app:layout_constraintBottom_toBottomOf="@+id/img_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_rectangle" />

    <TextView
        android:id="@+id/tv_wish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:text="@string/wishlist"
        android:textSize="@dimen/font_large"
        android:fontFamily="@font/monsemibolld"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/img_rectangle"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@+id/img_rectangle" />

    <ImageButton
        android:id="@+id/back_buy"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="@dimen/spacing_regular"
        android:background="@color/color_transparent"
        android:contentDescription="@string/cd_icon"
        android:src="@drawable/ic_buy"
        app:layout_constraintBottom_toBottomOf="@+id/img_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_rectangle" />

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_larger"
        android:layout_marginStart="@dimen/spacing_giant_two"
        android:layout_marginEnd="@dimen/spacing_giant_two"
        android:contentDescription="@string/text_img_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/box" />

    <TextView
        android:id="@+id/yt_wishlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_smaller"
        android:fontFamily="@font/monbold"
        android:gravity="center"
        android:text="@string/text_your_wishlist_is_empty"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_title_content"
        app:layout_constraintEnd_toEndOf="@+id/img_view"
        app:layout_constraintStart_toStartOf="@+id/img_view"
        app:layout_constraintTop_toBottomOf="@+id/img_view" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_smaller"
        android:gravity="center"
        android:fontFamily="@font/monreguler"
        android:text="@string/text_tap_here"
        app:layout_constraintEnd_toEndOf="@+id/yt_wishlist"
        app:layout_constraintStart_toStartOf="@+id/yt_wishlist"
        app:layout_constraintTop_toBottomOf="@+id/yt_wishlist" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_regular"
        android:layout_marginEnd="@dimen/spacing_regular"
        android:background="@drawable/custom_btn_wishlist"
        android:fontFamily="@font/monmedium"
        android:text="@string/text_find_product"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/spacing_huger"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>